# snake-game

./: .gitignore  Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
ui/: app-window.slint
